2015-10-11  Carl Hetherington  <cth@carlh.net>

	* Provide progress indication when finding
	subtitles (#711).

	* Updated ru_RU translation from Igor Voytovich.

	* Updated pl_PL translation from Marek Skrzelowski.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.8 released.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.7 released.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from
	Rob van Nieuwkerk.

2015-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.6 released.

2015-10-09  c.hetherington  <cth@carlh.net>

	* Create certificate chains with nicer default
	organizational unit etc.

	* Various improvements to server GUI.

	* Package main DCP-o-matic, server and batch
	converter on all platforms.

	* Add KDM creator application which can
	make new KDMs given a DKDM.

2015-10-08  Carl Hetherington  <cth@carlh.net>

	* Update to fr_FR translation from Thierry Journet.

2015-10-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.5 released.

2015-10-07  Carl Hetherington  <cth@carlh.net>

	* Fix job description layout on OS X.

2015-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.4 released.

2015-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.3 released.

2015-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.2 released.

2015-10-06  Carl Hetherington  <cth@carlh.net>

	* Fix subtitle timing when the DCP rate
	is different to their native rate.

	* Fix invalid SMPTE subtitle output
	in some cases.

	* Version 2.4.1 released.

2015-10-06  Carl Hetherington  <cth@carlh.net>

	* Speculative support for multi-part
	bitmap subtitles (#709).

2015-10-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.0 released.

2015-10-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.14 released.

2015-10-04  Carl Hetherington  <cth@carlh.net>

	* Fix subtitle timing under trim.

2015-10-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.13 released.
