@@ -21,6 +21,7 @@
 
 class Cinema;
 class Job;
+class Log;
 
 class CinemaKDMs
 {
@@ -35,7 +36,8 @@ public:
 		std::list<CinemaKDMs> cinema_kdms,
 		dcp::LocalTime from,
 		dcp::LocalTime to,
-		boost::shared_ptr<Job> job
+		boost::shared_ptr<Job> job,
+		boost::shared_ptr<Log> log
 		);
 
 	boost::shared_ptr<Cinema> cinema;
