@@ -1278,6 +1278,7 @@ public:
 		, _log_timing (0)
 		, _log_debug_decode (0)
 		, _log_debug_encode (0)
+		, _log_debug_email (0)
 	{}
 
 private:
@@ -1326,6 +1327,8 @@ private:
 			t->Add (_log_debug_decode, 1, wxEXPAND | wxALL);
 			_log_debug_encode = new wxCheckBox (_panel, wxID_ANY, _("Debug: encode"));
 			t->Add (_log_debug_encode, 1, wxEXPAND | wxALL);
+			_log_debug_email = new wxCheckBox (_panel, wxID_ANY, _("Debug: email sending"));
+			t->Add (_log_debug_email, 1, wxEXPAND | wxALL);
 			table->Add (t, 0, wxALL, 6);
 		}
 
@@ -1345,6 +1348,7 @@ private:
 		_log_timing->Bind (wxEVT_COMMAND_CHECKBOX_CLICKED, boost::bind (&AdvancedPage::log_changed, this));
 		_log_debug_decode->Bind (wxEVT_COMMAND_CHECKBOX_CLICKED, boost::bind (&AdvancedPage::log_changed, this));
 		_log_debug_encode->Bind (wxEVT_COMMAND_CHECKBOX_CLICKED, boost::bind (&AdvancedPage::log_changed, this));
+		_log_debug_email->Bind (wxEVT_COMMAND_CHECKBOX_CLICKED, boost::bind (&AdvancedPage::log_changed, this));
 #ifdef DCPOMATIC_WINDOWS
 		_win32_console->Bind (wxEVT_COMMAND_CHECKBOX_CLICKED, boost::bind (&AdvancedPage::win32_console_changed, this));
 #endif
@@ -1363,6 +1367,7 @@ private:
 		checked_set (_log_timing, config->log_types() & LogEntry::TYPE_TIMING);
 		checked_set (_log_debug_decode, config->log_types() & LogEntry::TYPE_DEBUG_DECODE);
 		checked_set (_log_debug_encode, config->log_types() & LogEntry::TYPE_DEBUG_ENCODE);
+		checked_set (_log_debug_email, config->log_types() & LogEntry::TYPE_DEBUG_EMAIL);
 #ifdef DCPOMATIC_WINDOWS
 		checked_set (_win32_console, config->win32_console());
 #endif
@@ -1404,6 +1409,9 @@ private:
 		if (_log_debug_encode->GetValue ()) {
 			types |= LogEntry::TYPE_DEBUG_ENCODE;
 		}
+		if (_log_debug_email->GetValue ()) {
+			types |= LogEntry::TYPE_DEBUG_EMAIL;
+		}
 		Config::instance()->set_log_types (types);
 	}
 
@@ -1423,6 +1431,7 @@ private:
 	wxCheckBox* _log_timing;
 	wxCheckBox* _log_debug_decode;
 	wxCheckBox* _log_debug_encode;
+	wxCheckBox* _log_debug_email;
 #ifdef DCPOMATIC_WINDOWS
 	wxCheckBox* _win32_console;
 #endif
